--- a/styler.css
+++ b/styler.css
@@ -1,5 +1,5 @@
 html, body {
-  font-family: Helvetica, sans-serif;
+  font-family: Helvetica, sans-seriff;
 }
 /* this is a test comment */
 input#wrapper {
